# quadcopter-simulation

./: .clang-format  .cmake-format.py  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: build.yml  devcontainer.yml  linting.yml
cmake/: CompilerWarnings.cmake
include/math/: Quaternion.hpp  Vector.hpp
include/time/: SimulationTime.hpp
lib/: CMakeLists.txt
lib/sofa/: .gitignore  CMakeLists.txt  README.md
lib/sofa/cmake/: sofaConfig.cmake.in
modules/: SimulationTime.sm  job_priorities.sm
scripts/: build.sh  cppcheck.sh
simulation/: S_define  S_overrides.mk
src/: CMakeLists.txt  main.cpp
src/atmos/: AtmosConditions_struct.hpp  CMakeLists.txt  IConstantAtmosConditionsModel.hpp  SimpleAtmosConditionsModel.cpp  SimpleAtmosConditionsModel.hpp
src/gravity/: CMakeLists.txt  GravityModel_enum.hpp  IGravityModel.hpp  J2Gravity.cpp  J2Gravity.hpp  SphericalGravity.cpp  SphericalGravity.hpp
src/integ/: CMakeLists.txt  IIntegrableObject.hpp  IntegratorRungeKutta4.hpp
src/math/: CMakeLists.txt  CrossProdMatrix.cpp  CrossProdMatrix.hpp  Quaternion.cpp  Quaternion.hpp  QuaternionToDcm.cpp  QuaternionToDcm.hpp  QuaternionToRotMat.cpp  QuaternionToRotMat.hpp  WrapPiDiv2.cpp  WrapTwoPi.cpp  WrapTwoPi.hpp
src/math/utils/: CMakeLists.txt  WrapPiDiv2.cpp  WrapPiDiv2.hpp  WrapTwoPi.cpp
src/time/: CMakeLists.txt  CalendarClockTime_struct.hpp  CalendarTimeToIsoString.cpp  CalendarTime_struct.hpp  ICalendarTimeClock.hpp  IEpochTimeClock.hpp  NanoTime.hpp  NanoTimeToSeconds.cpp  SecondsToNanoTime.cpp  SimulationTime.cpp  SimulationTime.hpp  SimulationTimeClock.cpp  SimulationTimeClock.hpp  TimeManager.cpp  TimeManager.hpp  UtcTimeClock.cpp  UtcTimeClock.hpp
src/time/utils/: CMakeLists.txt  CalendarTimeToIsoString.cpp  CalendarTimeToIsoString.hpp  NanoTimeToSeconds.cpp  NanoTimeToSeconds.hpp  SecondsToNanoTime.cpp  SecondsToNanoTime.hpp
src/transforms/: CMakeLists.txt  GetDcmEcefWrtEci.cpp  GetDcmEcefWrtEci.hpp
src/utils/: Conversions.hpp  constants.hpp
tests/: CMakeLists.txt
tests/gravity/: CMakeLists.txt  J2Gravity.test.cpp  SphericalGravity.test.cpp
tests/math/: CMakeLists.txt  CrossProdMatrix.test.cpp  Quaternion.test.cpp  QuaternionToDcm.test.cpp  WrapPiDiv2.test.cpp  WrapTwoPi.test.cpp
tests/math/utils/: CMakeLists.txt  WrapPiDiv2.test.cpp  WrapTwoPi.test.cpp
tests/time/: CMakeLists.txt  CalendarTimeToIsoString.test.cpp  UtcTimeClock.test.cpp
tests/time/utils/: CMakeLists.txt  CalendarTimeToIsoString.test.cpp  NanoTimeToSeconds.test.cpp  SecondsToNanoTime.test.cpp
tests/transforms/: CMakeLists.txt  GetDcmEcefWrtEci.test.cpp
